# demo-workflow-pypi

./: .pyproject.toml.swn  .pyproject.toml.swo  .pyproject.toml.swp  .setup.cfg.swp  CHANGELOG.md  README.md  package-lock.json  pyproject.toml  pyproject.toml_copy  setup.cfg
.github/: publish.yml
.github/workflows/: .python-publish.yml.swp  .python-publish1.yml.swp  .release.yaml.swp  publish.yml  python-package.yaml  python-publish.yml  python-publish1.yml  release.yaml  test.yml
demo_workflow_package/: main.py
demo_workflow_pypi/: __init__.py  main.py
tests/: test_main.py
